# Natality-IA

./: Makefile  README.md  README_NEW.md  USAGE.md  pyproject.toml  requirements.txt  run_pipeline.py
ProjetNatalite/: __init__.py  classification.py  dataset.py  features.py  main.py  plots.py
ProjetNatalite/Classification Dossier/: K-Means.py  linear_classifier.py  random_forest.py
ProjetNatalite/modeling/: __init__.py  predict.py  train.py
ProjetNatalite/pretraitement/: data_cleaner.py  dataset.py
models/: base_model.py  logistic_regression_model.py  model.pkl  svm_model.py
notebooks/: ProjetIA_new.ipynb  Prétraitement.ipynb  test.ipynb
scripts/: download_sample_data.py
tests/: test.py  test_data.py  test_dataset.py
